feat: add jwt utils generate token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# JWT secret
+auth.jwt.secret=J@NcRfUjXn2r5u8x/A%D*G-KaPdSgVkY
+# 1 day
+auth.jwt-expiration-milliseconds=86400000
+
+
