feat: add password encryption

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/personalfinances
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-
 # JWT secret
 auth.jwt.secret=J@NcRfUjXn2r5u8x/A%D*G-KaPdSgVkY
 # 1 day
