--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>A personal finance APP made with Spring Boot 3.0.0 and Java 17</description>
 	<properties>
 		<java.version>17</java.version>
+		<springdoc.version>2.0.2</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -76,6 +77,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<groupId>org.springdoc</groupId>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 	</dependencies>
