feat: add user and auth swagger custom docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
 # JWT secret
 auth.jwt.secret=J@NcRfUjXn2r5u8x/A%D*G-KaPdSgVkY
 # 1 day
